--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Hello Coursera</h1>
 
     <p>
-      its about time for Angular 1.
+      Its about time for Angular 1. If not now when?
     </p>
   </body>
 </html>
